--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -59,7 +59,7 @@
 	$("#addstep").submit(function(e){
 		e.preventDefault();
 		var formData={};
-		$(this).find("input[name]").each(function(index,node){
+		$(this).find("input[name], textarea[name]").each(function(index,node){
 			formData[node.name] = node.value;
 		});
 		formData["id"] = id;
