--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -61,6 +61,7 @@
 		var formData={};
 		$(this).find("input[name], textarea[name]").each(function(index,node){
 			formData[node.name] = node.value;
+			alert("node.name");
 		});
 		formData["id"] = id;
 		$.post($(this).attr("action"), formData).done(function () {
