--- a/views/adminskills.ejs
+++ b/views/adminskills.ejs
@@ -53,7 +53,7 @@
 		$("#addskill").submit(function(e){
 		e.preventDefault();
 		var formData={};
-		$(this).find("input[name], textarea[name]").each(function(index,node){
+		$(this).find("input[name]").each(function(index,node){
 			formData[node.name] = node.value;
 		});
 		formData["cat"] = cat_id;
