--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,13 +11,32 @@
 <!-- <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<style>
+	h3{
+		text-align: center;
+	}
+	img{
+		width: 50%;
+		margin: 1rem auto;
+	}
+	form{
+
+	}
+	input[type="file"]{
+		max-width: 50%;
+	}
+	button, a{
+		display: block;
+		margin: 1rem;
+	}
+</style>
 </head>
 <body>
 	<div class="container">
 	<main>
 
 	</main>
-	<form class="w-50" id="addcategory" method="post" action="https://sheltered-savannah-33614.herokuapp.com/add_category">
+	<form id="addcategory" method="post" action="https://sheltered-savannah-33614.herokuapp.com/add_category">
 		<div class="form-group">
 		<label>Name: <input type="text" name="name" required="" class="form-control"></label>
 		<input type="submit" class="btn btn-primary">
