--- a/views/loginadmin.ejs
+++ b/views/loginadmin.ejs
@@ -11,6 +11,15 @@
 	body{
 		background-color: #eee;
 	}
+	form{
+		width:50%;
+		margin: 2rem auto;
+		background-color: white;
+		padding:1rem;
+	}
+	form input{
+		margin:.5rem;
+	}
 </style>
 </head>
 <body>
