--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -24,10 +24,11 @@
 	}
 	input[type="file"]{
 		max-width: 50%;
+		margin:1rem auto;
 	}
-	button, a{
+	button, a, .btn{
 		display: block;
-		margin: 1rem;
+		margin: 1rem auto;
 	}
 </style>
 </head>
