--- a/views/loginadmin.ejs
+++ b/views/loginadmin.ejs
@@ -11,13 +11,16 @@
 	body{
 		background-color: #eee;
 	}
+	h1{
+		text-align: center;
+	}
 	form{
 		width:50%;
 		margin: 2rem auto;
 		background-color: white;
 		padding:1rem;
 	}
-	form input{
+	form input, button{
 		margin:.5rem;
 	}
 </style>
