--- a/views/adminskills.ejs
+++ b/views/adminskills.ejs
@@ -26,9 +26,9 @@
 		max-width: 50%;
 		margin:1rem auto;
 	}
-	button, a, .btn{
+	button, a{
 		display: block;
-		margin: 1rem auto;
+		margin: 1rem;
 	}
 </style>
 </head>
