--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -22,8 +22,9 @@
 		width: 50%;
 		margin: 1rem auto;
 	}
-	form{
-
+	.addcategory{
+		width:50%;
+		margin:2rem auto;
 	}
 	input[type="file"]{
 		max-width: 50%;
