--- a/views/adminskills.ejs
+++ b/views/adminskills.ejs
@@ -46,7 +46,7 @@
 		<div class="form-group">
 		<label>Name: <input type="text" name="name" required="" class="form-control"></label>
 		<label>XP: <input type="text" name="xp" required="" class="form-control"></label>
-		<input type="submit">
+		<button type="submit" class="btn btn-primary">Add</button>
 		</div>
 	</form>
 	</div>
@@ -59,9 +59,9 @@
 			'<h3>'+item.name+'</h3>'+
 			'<img class="img-fluid" src='+item.image_url+'>'+
 					'<form class="updphotoform" method="POST" action="https://sheltered-savannah-33614.herokuapp.com/upload_skill" enctype="multipart/form-data"><div class="form-group"><input type="file" name="image" class="form-control"><input type="hidden" name="id" value="'+item.id+'"><input type="hidden" name="catid" value="'+cat_id+'">'+
-					'<button type="submit" class="updphoto">Update photo</button></div></form>'+			
+					'<button type="submit" class="updphoto btn btn-primary">Update photo</button></div></form>'+			
 			'<h4>'+item.xp+'</h4>'+
-			'<a href="https://sheltered-savannah-33614.herokuapp.com/adminskill/'+item.id+'">View</a>'+
+			'<a class="btn btn-primary" href="https://sheltered-savannah-33614.herokuapp.com/adminskill/'+item.id+'">View</a>'+
 			'<button class="delskill btn btn-danger" data-link="https://sheltered-savannah-33614.herokuapp.com/del_skill" data-id="'+item.id+'">Delete</button>'+
 			'</div>';
 			$("main").append(skillblock);
